[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
tokio = {version = "1.41.1", features = ["full"]}
prost = "0.13.3"
tonic-reflection = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"